fix bug with location select taxa img not showing in range map

--- a/base.css
+++ b/base.css
@@ -217,7 +217,7 @@ select {
   height: 1.25em;
   position: relative;
   top: 0.23em;
-  margin-left: 0.25em;
+  margin: 0 0.25em;
 }
 .info-button::before {
   /* larger click target */
